--- a/AdventOfCode2019/Day10/Day10.vcxproj
+++ b/AdventOfCode2019/Day10/Day10.vcxproj
@@ -127,6 +127,13 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>lib /NOLOGO /OUT:"$(TargetPath).lib" "$(ProjectDir)$(PlatformTarget)\$(Configuration)\*.obj"
+lib /NOLOGO "$(TargetPath).lib" /REMOVE:"$(ProjectDir)$(PlatformTarget)\$(Configuration)\Main.obj"</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>Build static lib</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -147,12 +154,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CoordinateGenerator.cpp" />
     <ClCompile Include="Day10.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CoordinateGenerator.h" />
+    <ClInclude Include="Day10.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
