Day10 Part 1 complete

--- a/AdventOfCode2019/Day10/Day10.vcxproj
+++ b/AdventOfCode2019/Day10/Day10.vcxproj
@@ -99,6 +99,13 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>lib /NOLOGO /OUT:"$(TargetPath).lib" "$(ProjectDir)$(PlatformTarget)\$(Configuration)\*.obj"
+lib /NOLOGO "$(TargetPath).lib" /REMOVE:"$(ProjectDir)$(PlatformTarget)\$(Configuration)\Main.obj"</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>Build static lib</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
