--- a/AdventOfCode2019/Day13/Day13.vcxproj.filters
+++ b/AdventOfCode2019/Day13/Day13.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Day13.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Day11\Computer.cpp">
+    <ClCompile Include="Computer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -26,7 +26,7 @@
     <Text Include="input.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Day11\Computer.h">
+    <ClInclude Include="Computer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
