Day13 Part 2 Complete

--- a/AdventOfCode2019/Day13/Day13.vcxproj
+++ b/AdventOfCode2019/Day13/Day13.vcxproj
@@ -162,6 +162,5 @@
     <ClInclude Include="Computer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
