--- a/Day01/Day01.vcxproj
+++ b/Day01/Day01.vcxproj
@@ -149,6 +149,11 @@
   <ItemGroup>
     <ClCompile Include="Day01.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt">
+      <DeploymentContent>true</DeploymentContent>
+    </Text>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
