Day02 part 2 complete

--- a/2021/Day02/Day02.vcxproj.filters
+++ b/2021/Day02/Day02.vcxproj.filters
@@ -22,4 +22,9 @@
   <ItemGroup>
     <Text Include="input.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Day02.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
