--- a/2021/Day08/Day08.vcxproj.filters
+++ b/2021/Day08/Day08.vcxproj.filters
@@ -21,5 +21,6 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
+    <Text Include="test_input.txt" />
   </ItemGroup>
 </Project>
