--- a/2021/Day09/Day09.vcxproj.filters
+++ b/2021/Day09/Day09.vcxproj.filters
@@ -19,4 +19,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
+    <Text Include="test_input.txt" />
+  </ItemGroup>
 </Project>
