--- a/2021/Utilities/Utilities.vcxproj
+++ b/2021/Utilities/Utilities.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClInclude Include="dllexport.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="grid.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
