--- a/2021/Utilities/Utilities.vcxproj.filters
+++ b/2021/Utilities/Utilities.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="utilities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="grid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
