--- a/2022/Day01/Day01.vcxproj.filters
+++ b/2022/Day01/Day01.vcxproj.filters
@@ -15,8 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DayTemplate.cpp">
+    <ClCompile Include="Day01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
   </ItemGroup>
 </Project>
