Moved Utilities into a separate solution

--- a/2021/Day01/Day01.vcxproj
+++ b/2021/Day01/Day01.vcxproj
@@ -149,7 +149,7 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Utilities\Utilities.vcxproj">
+    <ProjectReference Include="..\..\Utilities\Utilities\Utilities.vcxproj">
       <Project>{1593f446-de1a-49f4-a134-53d76599276e}</Project>
     </ProjectReference>
   </ItemGroup>
