--- a/2021/Day02/Day02.vcxproj
+++ b/2021/Day02/Day02.vcxproj
@@ -146,7 +146,7 @@
     <ClCompile Include="Day02.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Utilities\Utilities.vcxproj">
+    <ProjectReference Include="..\..\Utilities\Utilities\Utilities.vcxproj">
       <Project>{1593f446-de1a-49f4-a134-53d76599276e}</Project>
     </ProjectReference>
   </ItemGroup>
