--- a/2022/Day01/Day01.vcxproj
+++ b/2022/Day01/Day01.vcxproj
@@ -150,6 +150,9 @@
     <ProjectReference Include="..\..\2021\Utilities\Utilities.vcxproj">
       <Project>{1593f446-de1a-49f4-a134-53d76599276e}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\Utilities\Utilities\Utilities.vcxproj">
+      <Project>{1593f446-de1a-49f4-a134-53d76599276e}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
