--- a/2022/Day10/Day10.vcxproj
+++ b/2022/Day10/Day10.vcxproj
@@ -147,6 +147,9 @@
     <ProjectReference Include="..\..\2021\Utilities\Utilities.vcxproj">
       <Project>{1593f446-de1a-49f4-a134-53d76599276e}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\Utilities\Utilities\Utilities.vcxproj">
+      <Project>{1593f446-de1a-49f4-a134-53d76599276e}</Project>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
